Se añade funcion que llama a los coche seleccionados por console.log

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
  <audio src="assets/musica.mp3" autoplay></audio>
-
+ 
     <!--PANTALA INICIO-->
     <section id="pantalla1">
-        <div class="screen1">
+            <div class="screen1">
             <div class="screen1A">
                 <img class="fotoInicio" src="assets/IMG/screen1.jpg" alt="">
             </div>
@@ -26,29 +26,33 @@
     <!--PANTALA SELECCION-->
 
     <section id="pantalla2" style="display: none;">
-        <div class="screen2">
-            <div class="screen2A">
-                <img id="coche1" class="fotoCoche1" src="assets/IMG/coche.png" onmouseover="cambiaColorOver1()" onmouseout="cambiaColorOut1()"  onclick="selectCar1()"/>
-                <img id="coche2" class="fotoCoche2" src="assets/IMG/coche.png" onmouseover="cambiaColorOver2()" onmouseout="cambiaColorOut2()" onclick="selectCar2()"/>
-                <img id="coche3" class="fotoCoche3" src="assets/IMG/coche.png" onmouseover="cambiaColorOver3()" onmouseout="cambiaColorOut3()" onclick="selectCar3()"/>
-                <img id="coche4" class="fotoCoche4" src="assets/IMG/coche.png" onmouseover="cambiaColorOver4()" onmouseout="cambiaColorOut4()"  onclick="selectCar4()"/>
+            <div class="content">
+                <h1>Alert</h1>                                  
+                <p>Al cargar la página, se ejecutará un alert con el texto "Hola Mundo".</p>
             </div>
-
-            <div class="screen2B">
-                <div class="screen2BCaja1">
-                    <img id="_mando" class="fotoMando" src="/assets/IMG/mando2.jpg" alt="" onclick='cambiarPantalla3()' >
+            <div class="screen2">
+                <div class="screen2A">
+                    <img id="coche1" class="fotoCoche1" src="assets/IMG/coche.png" onmouseover="cambiaColorOver1()" onmouseout="cambiaColorOut1()"  onclick="selectCar1()"/>
+                    <img id="coche2" class="fotoCoche2" src="assets/IMG/coche.png" onmouseover="cambiaColorOver2()" onmouseout="cambiaColorOut2()" onclick="selectCar2()"/>
+                    <img id="coche3" class="fotoCoche3" src="assets/IMG/coche.png" onmouseover="cambiaColorOver3()" onmouseout="cambiaColorOut3()" onclick="selectCar3()"/>
+                    <img id="coche4" class="fotoCoche4" src="assets/IMG/coche.png" onmouseover="cambiaColorOver4()" onmouseout="cambiaColorOut4()"  onclick="selectCar4()"/>
                 </div>
-               
-            </div>
 
-            <div class="screen2C">
-                <img id="coche5" class="fotoCoche5" src="assets/IMG/coche.png" onmouseover="cambiaColorOver5()" onmouseout="cambiaColorOut5()"  onclick="selectCar5()"/>
-                <img id="coche6" class="fotoCoche6" src="assets/IMG/coche.png" onmouseover="cambiaColorOver6()" onmouseout="cambiaColorOut6()"  onclick="selectCar6()"/>
-                <img id="coche7" class="fotoCoche7" src="assets/IMG/coche.png" onmouseover="cambiaColorOver7()" onmouseout="cambiaColorOut7()"  onclick="selectCar7()"/>
-                <img id="coche8" class="fotoCoche8" src="assets/IMG/coche.png" onmouseover="cambiaColorOver8()" onmouseout="cambiaColorOut8()"  onclick="selectCar8()"/>
+                <div class="screen2B">
+                    <div class="screen2BCaja1">
+                        <img id="_mando" class="fotoMando" src="/assets/IMG/mando2.jpg" alt="" onclick='cambiarPantalla3()' >
+                    </div>
+                
+                </div>
 
+                <div class="screen2C">
+                    <img id="coche5" class="fotoCoche5" src="assets/IMG/coche.png" onmouseover="cambiaColorOver5()" onmouseout="cambiaColorOut5()"  onclick="selectCar5()"/>
+                    <img id="coche6" class="fotoCoche6" src="assets/IMG/coche.png" onmouseover="cambiaColorOver6()" onmouseout="cambiaColorOut6()"  onclick="selectCar6()"/>
+                    <img id="coche7" class="fotoCoche7" src="assets/IMG/coche.png" onmouseover="cambiaColorOver7()" onmouseout="cambiaColorOut7()"  onclick="selectCar7()"/>
+                    <img id="coche8" class="fotoCoche8" src="assets/IMG/coche.png" onmouseover="cambiaColorOver8()" onmouseout="cambiaColorOut8()"  onclick="selectCar8()"/>
+
+                </div>
             </div>
-        </div>
         </div>
     </section>
 
@@ -57,7 +61,7 @@
     <section id="pantalla3" style="display: none;">
         <div class="screen3">
             <div class="screen3A">
-                <div class="screen3A1"></div>    
+                <div class="screen3A1" onclick="imprimeCoche1()"></div>    
                 <div class="screen3A2"></div>  
             </div>
 
@@ -67,8 +71,8 @@
             </div>
 
 
-            <div class="screen3C">
-                <div class="screen3C1"></div>    
+            <div class="screen3C">-
+                <div class="screen3C1" onclick="imprimeCoche2()" ></div>    
                 <div class="screen3C2"></div>  
             </div>
         </div>
