Se añade funcion que llama al constructor de los coches seleccionados por console.log

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="screen3">
             <div class="screen3A">
                 <div class="screen3A1" onclick="imprimeCoche1()"></div>    
-                <div class="screen3A2"></div>  
+                <div class="screen3A2" onclick="imprimeConstructor1()"></div>  
             </div>
 
             <div class="screen3B">
@@ -73,7 +73,7 @@
 
             <div class="screen3C">-
                 <div class="screen3C1" onclick="imprimeCoche2()" ></div>    
-                <div class="screen3C2"></div>  
+                <div class="screen3C2" onclick="imprimeConstructor2()"></div>  
             </div>
         </div>
     </section>
